--- a/docbuild/api/Scrapbook101core.HelperClasses.yml
+++ b/docbuild/api/Scrapbook101core.HelperClasses.yml
@@ -17,8 +17,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/HelperClasses.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: HelperClasses
     path: ../Scrapbook101core/HelperClasses.cs
     startLine: 12
@@ -61,15 +61,16 @@ items:
   source:
     remote:
       path: Scrapbook101core/HelperClasses.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: BuildPathList
     path: ../Scrapbook101core/HelperClasses.cs
-    startLine: 19
+    startLine: 22
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
   summary: "\nReturns paths for images to display for a list of Scrapbook101core items. \n"
+  remarks: "\nFor each Scrapbook101core item, one image is found or the default image is used.\n"
   example: []
   syntax:
     content: public static List<string> BuildPathList(IEnumerable<Item> items)
@@ -105,11 +106,11 @@ items:
   source:
     remote:
       path: Scrapbook101core/HelperClasses.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: GetGeocode
     path: ../Scrapbook101core/HelperClasses.cs
-    startLine: 61
+    startLine: 64
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
