--- a/docbuild/articles/toc.yml
+++ b/docbuild/articles/toc.yml
@@ -21,5 +21,5 @@
     href: build-with-docfx.md
   - name: Azure Pipeline
     href: azure-pipeline.md
-  - name: Adding a Web API
+  - name: Add a Web API
     href: add-web-api.md
